--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,23 @@
-name: CI-Test
+name: iOS Test Workflow
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  test:
-    name: Test
-    runs-on: macos-latest
-    strategy:
-        matrix:
-          destination: ['platform=iOS Simulator,OS=13.2,name=iPhone 11']
+  build:
+    runs-on: macOS-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@main
-      - name: Build
+        uses: actions/checkout@v2
+
+      - name: Set up Xcode
+        uses: actions/setup-xcode@v2
+        with:
+          xcode-version: '13.2.1' # Replace with your Xcode version
+
+      - name: Build and test
         run: |
-          xcodebuild clean build -project AppES.xcodeproj -scheme AppES -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
-        env: 
-         destination: ${{ matrix.destination }}
-      - name: Test
-        run: |
-          xcodebuild clean test -project AppES.xcodeproj -scheme AppES -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
-        env: 
-         destination: ${{ matrix.destination }}
+          xcodebuild -project AppES.xcodeproj -scheme AppES test
