--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,17 @@
-name: iOS Test Workflow
-
+name: iOS CICD
 on:
-  push:
-    branches:
-      - main
-
+ push:
+  branches:
+   - [main]
+ pull_request:
+  branches:
+   - [main]
 jobs:
-  build:
-    runs-on: macOS-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up Xcode
-        uses: actions/setup-xcode@v2
-        with:
-          xcode-version: '13.2.1' # Replace with your Xcode version
-
-      - name: Build and test
-        run: |
-          xcodebuild -project AppES.xcodeproj -scheme AppES test
+ build-and-test:
+  runs-on: macos-latest
+ steps:
+  - uses: actions/checkout@v2
+  - name: Select Xcode
+    run: sudo Xcode-select -switch /Applications/Xcode_13.2.1.app
+  - name: Build & Test
+    run: xcodebuild clean build test -workspace AppES.xcworkspace -scheme AppES -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.2'
