--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -47,3 +47,7 @@ jobs:
         uses: codecov/codecov-action@v1.2.1
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Swift Coverage Report
+        uses: maxep/spm-lcov-action@0.3.1
+            
