--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -48,6 +48,11 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Swift Coverage Report
-        uses: maxep/spm-lcov-action@0.3.1
+      - name: Run tests
+        run: swift test --enable-code-coverage
+
+      - name: Test coverage
+        uses: maxep/spm-lcov-action@0.3.0
+        with:
+          output-file: ./coverage/lcov.info
             
